@@ -1,6 +1,7 @@
 package com.tka.entity;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
@@ -37,7 +38,9 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        return Collections.singletonList(
+            new SimpleGrantedAuthority("ROLE_" + role.name())
+        );
     }
 
     @Override
@@ -69,4 +72,8 @@ public class User implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
+
+	public String getUserName() {
+		return this.userName;
+	}
 }
